# project-new-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  archive_src.sh  format_sources.sh
cmake/: fetch_project_3rdparty.cmake
cmake/patches/glm-1.0.1/: fix_include.patch
projects/lib/example/: CMakeLists.txt
projects/lib/example/doc/: CMakeLists.txt  conf.py.in  example.doxygen.in  index.rst
projects/lib/example/include/example/: example.hpp
projects/lib/example/src/: example.cpp
projects/lib/example/templates/: config.h.in
projects/lib/example/tests/: CMakeLists.txt  test_version_string.cpp
projects/lib/glfwpp/: CMakeLists.txt
projects/lib/glfwpp/docs/: glfw_api.h  glfw_types.hpp
projects/lib/glfwpp/include/glfw/: glfw.hpp
projects/lib/glfwpp/interface/glfwpp/: glfwpp.hpp
projects/lib/glfwpp/src/: glfw.cpp
projects/lib/glfwpp/tests/: CMakeLists.txt  simple.cpp
projects/lib/glmeta/: CMakeLists.txt
projects/lib/glmeta/include/glmeta/: glmeta.hpp
projects/lib/glmeta/tests/: CMakeLists.txt  test.cpp
projects/lib/glpp/: CMakeLists.txt
projects/lib/glpp/include/: glpp.hpp
